--- a/index.html
+++ b/index.html
@@ -3,165 +3,160 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pantalla Hacker</title>
+  <title>Página de Mateo 6-2</title>
   <style>
+    /* Fondo Matrix animado */
     body {
       margin: 0;
-      height: 100vh;
-      background: radial-gradient(circle at center, #000 0%, #020b02 100%);
-      font-family: "Courier New", monospace;
-      color: #00ff9d;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
+      padding: 0;
+      background: black;
+      color: #00ff00;
+      font-family: 'Courier New', monospace;
+      overflow-x: hidden;
     }
 
-    /* Pantalla principal */
-    .terminal {
-      background: rgba(0, 0, 0, 0.6);
-      border: 2px solid #00ff9d;
-      border-radius: 10px;
-      padding: 20px 30px;
-      width: 600px;
-      max-width: 90%;
-      box-shadow: 0 0 15px #00ff9d;
-    }
-
-    .line {
-      font-size: 18px;
-      line-height: 1.5;
-      white-space: pre-wrap;
-    }
-
-    .cursor {
-      display: inline-block;
-      width: 10px;
-      background: #00ff9d;
-      margin-left: 3px;
-      animation: blink 0.7s infinite;
-    }
-
-    @keyframes blink {
-      50% { background: transparent; }
-    }
-
-    /* Botón activar sonido */
-    #soundButton {
-      position: fixed;
-      top: 15px;
-      right: 15px;
-      background: #000;
-      border: 1px solid #00ff9d;
-      color: #00ff9d;
-      padding: 8px 15px;
-      cursor: pointer;
-      font-family: inherit;
-      border-radius: 5px;
-      box-shadow: 0 0 8px #00ff9d;
-      transition: background 0.3s;
-    }
-    #soundButton:hover {
-      background: #002a1d;
-    }
-
-    /* Fondo matrix animado */
     canvas {
       position: fixed;
       top: 0;
       left: 0;
+      width: 100%;
+      height: 100%;
       z-index: -1;
+    }
+
+    /* Estilo para la pantalla inicial */
+    .container {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .typing {
+      font-size: 3rem;
+      font-weight: bold;
+      border-right: 4px solid #00ff00;
+      white-space: nowrap;
+      overflow: hidden;
+      animation: blink 0.7s infinite;
+    }
+
+    @keyframes blink {
+      50% { border-color: transparent; }
+    }
+
+    /* Segunda sección */
+    .second-section {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2.5rem;
+      color: cyan;
+      text-shadow: 0px 0px 10px cyan;
+    }
+
+    /* Botón para bajar */
+    .scroll-btn {
+      margin-top: 30px;
+      padding: 15px 30px;
+      font-size: 1.5rem;
+      background: none;
+      border: 2px solid #00ff00;
+      color: #00ff00;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: 0.3s;
+    }
+
+    .scroll-btn:hover {
+      background: #00ff00;
+      color: black;
     }
   </style>
 </head>
 <body>
-  <button id="soundButton">🔊 Activar sonido</button>
-  <div class="terminal">
-    <div id="output"></div><span class="cursor"></span>
-  </div>
-
   <canvas id="matrix"></canvas>
 
-  <audio id="typeSound" src="https://actions.google.com/sounds/v1/foley/typewriter.ogg"></audio>
+  <div class="container">
+    <div class="typing" id="typing-text"></div>
+    <button class="scroll-btn" onclick="scrollToSection()">Entrar</button>
+  </div>
+
+  <div class="second-section" id="second-section">
+    🚀 Bienvenidos a la página oficial de Mateo 6-2 🌟
+  </div>
 
   <script>
-    const output = document.getElementById("output");
-    const cursor = document.querySelector(".cursor");
-    const typeSound = document.getElementById("typeSound");
-    const soundButton = document.getElementById("soundButton");
-    let soundEnabled = false;
-
-    soundButton.addEventListener("click", () => {
-      soundEnabled = true;
-      typeSound.play().then(() => typeSound.pause());
-      soundButton.textContent = "✅ Sonido activo";
-    });
-
-    // Texto que aparece en pantalla
-    const mensajes = [
-      "Iniciando sistema...",
-      "Buscando servidor...",
-      "Conectando...",
-      "Servidor encontrado ✔",
-      "Página del mejor grupo de la exposición",
-      "Página de Mateo 6-2"
-    ];
-
-    let i = 0, j = 0;
-
-    function escribir() {
-      if (i < mensajes.length) {
-        if (j < mensajes[i].length) {
-          output.innerHTML += mensajes[i][j];
-          if (soundEnabled) {
-            typeSound.currentTime = 0;
-            typeSound.play();
-          }
-          j++;
-          setTimeout(escribir, 60);
-        } else {
-          output.innerHTML += "<br>";
-          i++;
-          j = 0;
-          setTimeout(escribir, 800);
-        }
-      }
-    }
-
-    escribir();
-
-    // Efecto Matrix en canvas
+    // === Fondo Matrix ===
     const canvas = document.getElementById("matrix");
     const ctx = canvas.getContext("2d");
-
     canvas.height = window.innerHeight;
     canvas.width = window.innerWidth;
 
-    const letters = "アァイィウヴエェオカガキギクグケゲコゴサザシジスズセゼソゾタダチヂッツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモヤユヨラリルレロワヲンABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-    const fontSize = 16;
+    const letters = "01ABCDEFGHIJKLMNOPQRSTUVWXYZ#$%&";
+    const matrix = letters.split("");
+
+    const fontSize = 14;
     const columns = canvas.width / fontSize;
-    const drops = Array.from({ length: columns }).map(() => 1);
+    const drops = [];
+
+    for (let x = 0; x < columns; x++) drops[x] = 1;
 
     function draw() {
       ctx.fillStyle = "rgba(0, 0, 0, 0.1)";
       ctx.fillRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "#00ff9d";
+      ctx.fillStyle = `hsl(${Math.random()*360},100%,50%)`; // colores aleatorios
       ctx.font = fontSize + "px monospace";
-      for (let x = 0; x < drops.length; x++) {
-        const text = letters.charAt(Math.floor(Math.random() * letters.length));
-        ctx.fillText(text, x * fontSize, drops[x] * fontSize);
-        if (drops[x] * fontSize > canvas.height && Math.random() > 0.95) {
-          drops[x] = 0;
-        }
-        drops[x]++;
+      for (let i = 0; i < drops.length; i++) {
+        const text = matrix[Math.floor(Math.random() * matrix.length)];
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
+        drops[i]++;
       }
     }
-    setInterval(draw, 40);
+    setInterval(draw, 35); // más rápido
 
-    window.addEventListener("resize", () => {
-      canvas.height = window.innerHeight;
-      canvas.width = window.innerWidth;
-    });
+    // === Animación de texto (escribir y borrar) ===
+    const frases = [
+      "Buscando servidores...",
+      "El mejor grupo de la exposición",
+      "Página de Mateo 6-2"
+    ];
+    let fraseIndex = 0;
+    let charIndex = 0;
+    let borrando = false;
+
+    function typeEffect() {
+      const typingText = document.getElementById("typing-text");
+      const frase = frases[fraseIndex];
+
+      if (!borrando && charIndex <= frase.length) {
+        typingText.textContent = frase.substring(0, charIndex++);
+      } else if (borrando && charIndex >= 0) {
+        typingText.textContent = frase.substring(0, charIndex--);
+      }
+
+      if (charIndex === frase.length + 1) {
+        borrando = true;
+        setTimeout(typeEffect, 1000);
+        return;
+      } else if (charIndex < 0) {
+        borrando = false;
+        fraseIndex = (fraseIndex + 1) % frases.length;
+      }
+
+      setTimeout(typeEffect, borrando ? 50 : 100);
+    }
+    typeEffect();
+
+    // === Scroll suave ===
+    function scrollToSection() {
+      document.getElementById("second-section").scrollIntoView({ behavior: "smooth" });
+    }
   </script>
 </body>
 </html>
