--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Mateo 6-2</title>
   <style>
-    /* Fondo Matrix animado */
     body {
       margin: 0;
       padding: 0;
@@ -24,7 +23,6 @@
       z-index: -1;
     }
 
-    /* Recuadro hacker */
     .container {
       height: 100vh;
       display: flex;
@@ -42,7 +40,7 @@
     }
 
     .typing {
-      font-size: 2.8rem; /* un poco más grande */
+      font-size: 2.8rem;
       font-weight: bold;
       border-right: 4px solid #00ff00;
       white-space: nowrap;
@@ -54,20 +52,19 @@
       50% { border-color: transparent; }
     }
 
-    /* Segunda sección */
     .second-section {
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      font-size: 2.5rem;
+      font-size: 2rem;
       color: cyan;
       text-shadow: 0px 0px 10px cyan;
       padding: 20px;
       text-align: center;
     }
 
-    /* Botón */
     .scroll-btn {
       margin-top: 30px;
       padding: 15px 30px;
@@ -84,6 +81,36 @@
       background: #00ff00;
       color: black;
     }
+
+    /* Estilo del video */
+    video {
+      margin-top: 20px;
+      width: 80%;
+      max-width: 700px;
+      border: 3px solid cyan;
+      border-radius: 12px;
+      box-shadow: 0 0 25px cyan;
+    }
+
+    /* Botón de descarga */
+    .download-btn {
+      margin-top: 20px;
+      padding: 12px 25px;
+      font-size: 1.3rem;
+      background: none;
+      border: 2px solid cyan;
+      color: cyan;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: 0.3s;
+      text-decoration: none;
+      display: inline-block;
+    }
+
+    .download-btn:hover {
+      background: cyan;
+      color: black;
+    }
   </style>
 </head>
 <body>
@@ -98,6 +125,15 @@
 
   <div class="second-section" id="second-section">
     🚀 Bienvenidos a la página oficial de Mateo 6-2 🌟
+    
+    <!-- Video incrustado -->
+    <video controls>
+      <source src="video.mp4" type="video/mp4">
+      Tu navegador no soporta video.
+    </video>
+
+    <!-- Botón de descarga -->
+    <a class="download-btn" href="video.mp4" download>⬇ Descargar Video</a>
   </div>
 
   <script>
