--- a/index.html
+++ b/index.html
@@ -2,207 +2,159 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Mateo 6-2</title>
+  <title>Black Hole Animado</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: black;
-      color: #00ff00;
-      font-family: 'Courier New', monospace;
-      overflow-x: hidden;
+    body{
+      margin:0;
+      background:#000;
+      color:#fff;
+      font-family:Arial, Helvetica, sans-serif;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      min-height:100vh;
     }
 
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
+    h1{
+      font-size:2.2rem;
+      margin-bottom:20px;
+      text-align:center;
+      letter-spacing:2px;
+    }
+
+    /* ===== Black Hole – Mateo 6-2 ===== */
+    .bh-wrapper{
+      position: relative;
+      width: min(70vmin, 560px);
+      height: min(70vmin, 560px);
+      margin: 20px auto;
+      display: grid;
+      place-items: center;
+      filter: drop-shadow(0 0 25px #00ffbf);
+    }
+
+    .blackhole{
+      position: relative;
       width: 100%;
       height: 100%;
-      z-index: -1;
+      display: grid;
+      place-items: center;
+      transform: translateZ(0); /* acelera animación */
     }
 
-    .container {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    /* Núcleo negro (horizonte de eventos) */
+    .bh-core{
+      position: absolute;
+      width: 26%;
+      height: 26%;
+      border-radius: 50%;
+      background: radial-gradient(closest-side, #000 70%, #020202 100%);
+      box-shadow: inset 0 0 30px #000;
+      z-index: 3;
     }
 
-    .box {
-      border: 3px solid #00ff00;
-      padding: 40px 60px;
-      border-radius: 12px;
-      box-shadow: 0 0 25px #00ff00;
-      text-align: center;
-      max-width: 90%;
+    /* Disco de acreción */
+    .bh-disk{
+      position: absolute;
+      width: 82%;
+      height: 82%;
+      border-radius: 50%;
+      background:
+        conic-gradient(
+          from 0deg,
+          #fffb 0 20%,
+          #fff0 20% 30%,
+          #0ff8 30% 50%,
+          #fff0 50% 60%,
+          #0f08 60% 80%,
+          #fff0 80% 100%
+        );
+      filter: blur(1px) brightness(1.1) saturate(1.4);
+      animation: bh-spin 7s linear infinite;
+      z-index: 2;
     }
 
-    .typing {
-      font-size: 2.8rem;
-      font-weight: bold;
-      border-right: 4px solid #00ff00;
-      white-space: nowrap;
-      overflow: hidden;
-      animation: blink 0.7s infinite;
+    /* Halo/relativistic glow */
+    .bh-glow{
+      position: absolute;
+      width: 96%;
+      height: 96%;
+      border-radius: 50%;
+      background:
+        radial-gradient(closest-side, #0000 60%, #0ff2 72%, #0ff1 78%, #0000 90%),
+        radial-gradient(closest-side, #0000 58%, #00ff9033 70%, #0000 86%);
+      filter: blur(2px);
+      animation: bh-breathe 4s ease-in-out infinite;
+      z-index: 1;
     }
 
-    @keyframes blink {
-      50% { border-color: transparent; }
+    /* Anillo exterior */
+    .bh-ring{
+      position: absolute;
+      width: 110%;
+      height: 34%;
+      border-radius: 50%;
+      background:
+        radial-gradient(closest-side, #0000 60%, #00ffd033 90%, #0000 100%);
+      transform: rotateX(70deg);
+      filter: blur(2px);
+      animation: bh-wobble 6s ease-in-out infinite;
+      z-index: 0;
     }
 
-    .second-section {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-size: 2rem;
-      color: cyan;
-      text-shadow: 0px 0px 10px cyan;
-      padding: 20px;
-      text-align: center;
+    /* Estrellas */
+    .bh-stars{
+      position: absolute;
+      inset: -10% -10% -10% -10%;
+      background:
+        radial-gradient(circle at 20% 30%, #ffffffaa 1px, transparent 2px),
+        radial-gradient(circle at 80% 60%, #ffffffaa 1px, transparent 2px),
+        radial-gradient(circle at 60% 15%, #ffffffaa 1px, transparent 2px),
+        radial-gradient(circle at 35% 80%, #ffffffaa 1px, transparent 2px),
+        radial-gradient(circle at 70% 75%, #ffffffaa 1px, transparent 2px),
+        radial-gradient(circle at 10% 65%, #ffffffaa 1px, transparent 2px);
+      background-size: 100% 100%;
+      opacity: .55;
+      mix-blend-mode: screen;
+      animation: bh-parallax 18s linear infinite;
+      pointer-events: none;
     }
 
-    .scroll-btn {
-      margin-top: 30px;
-      padding: 15px 30px;
-      font-size: 1.4rem;
-      background: none;
-      border: 2px solid #00ff00;
-      color: #00ff00;
-      cursor: pointer;
-      border-radius: 8px;
-      transition: 0.3s;
+    /* Animaciones */
+    @keyframes bh-spin{
+      to{ transform: rotate(360deg); }
     }
-
-    .scroll-btn:hover {
-      background: #00ff00;
-      color: black;
+    @keyframes bh-breathe{
+      0%,100%{ filter: blur(2px) brightness(1); }
+      50%{ filter: blur(4px) brightness(1.3); }
     }
-
-    /* Estilo del video */
-    video {
-      margin-top: 20px;
-      width: 80%;
-      max-width: 700px;
-      border: 3px solid cyan;
-      border-radius: 12px;
-      box-shadow: 0 0 25px cyan;
+    @keyframes bh-wobble{
+      0%,100%{ transform: rotateX(70deg) rotateZ(0deg); }
+      50%{ transform: rotateX(70deg) rotateZ(8deg); }
     }
-
-    /* Botón de descarga */
-    .download-btn {
-      margin-top: 20px;
-      padding: 12px 25px;
-      font-size: 1.3rem;
-      background: none;
-      border: 2px solid cyan;
-      color: cyan;
-      cursor: pointer;
-      border-radius: 8px;
-      transition: 0.3s;
-      text-decoration: none;
-      display: inline-block;
-    }
-
-    .download-btn:hover {
-      background: cyan;
-      color: black;
+    @keyframes bh-parallax{
+      from{ background-position:0 0; }
+      to{ background-position:200px 400px; }
     }
   </style>
 </head>
 <body>
-  <canvas id="matrix"></canvas>
 
-  <div class="container">
-    <div class="box">
-      <div class="typing" id="typing-text"></div>
-      <button class="scroll-btn" onclick="scrollToSection()">Entrar</button>
+  <h1>Agujero Negro CSS Animado 🌀</h1>
+
+  <!-- Agujero negro -->
+  <div class="bh-wrapper">
+    <div class="blackhole">
+      <div class="bh-core"></div>
+      <div class="bh-disk"></div>
+      <div class="bh-glow"></div>
+      <div class="bh-ring"></div>
     </div>
+    <div class="bh-stars"></div>
   </div>
 
-  <div class="second-section" id="second-section">
-    🚀 Bienvenidos a la página oficial de Mateo 6-2 🌟
-    
-    <!-- Video incrustado -->
-    <video controls>
-      <source src="video.mp4" type="video/mp4">
-      Tu navegador no soporta video.
-    </video>
+  <p>Todo hecho solo con <b>HTML + CSS</b></p>
 
-    <!-- Botón de descarga -->
-    <a class="download-btn" href="video.mp4" download>⬇ Descargar Video</a>
-  </div>
-
-  <script>
-    // === Fondo Matrix ===
-    const canvas = document.getElementById("matrix");
-    const ctx = canvas.getContext("2d");
-    canvas.height = window.innerHeight;
-    canvas.width = window.innerWidth;
-
-    const letters = "01ABCDEFGHIJKLMNOPQRSTUVWXYZ#$%&";
-    const matrix = letters.split("");
-
-    const fontSize = 14;
-    const columns = canvas.width / fontSize;
-    const drops = [];
-
-    for (let x = 0; x < columns; x++) drops[x] = 1;
-
-    function draw() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.1)";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = `hsl(${Math.random()*360},100%,50%)`;
-      ctx.font = fontSize + "px monospace";
-      for (let i = 0; i < drops.length; i++) {
-        const text = matrix[Math.floor(Math.random() * matrix.length)];
-        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
-        drops[i]++;
-      }
-    }
-    setInterval(draw, 35);
-
-    // === Animación de texto ===
-    const frases = [
-      "Buscando servidores...",
-      "El mejor grupo de la exposición",
-      "Página de Mateo 6-2"
-    ];
-    let fraseIndex = 0;
-    let charIndex = 0;
-    let borrando = false;
-
-    function typeEffect() {
-      const typingText = document.getElementById("typing-text");
-      const frase = frases[fraseIndex];
-
-      if (!borrando && charIndex <= frase.length) {
-        typingText.textContent = frase.substring(0, charIndex++);
-      } else if (borrando && charIndex >= 0) {
-        typingText.textContent = frase.substring(0, charIndex--);
-      }
-
-      if (charIndex === frase.length + 1) {
-        borrando = true;
-        setTimeout(typeEffect, 1000);
-        return;
-      } else if (charIndex < 0) {
-        borrando = false;
-        fraseIndex = (fraseIndex + 1) % frases.length;
-      }
-
-      setTimeout(typeEffect, borrando ? 50 : 100);
-    }
-    typeEffect();
-
-    // === Scroll suave ===
-    function scrollToSection() {
-      document.getElementById("second-section").scrollIntoView({ behavior: "smooth" });
-    }
-  </script>
 </body>
 </html>
