--- a/index.html
+++ b/index.html
@@ -2,36 +2,69 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Black Hole Animado</title>
+  <title>Página de Mateo</title>
   <style>
-    body{
-      margin:0;
-      background:#000;
-      color:#fff;
-      font-family:Arial, Helvetica, sans-serif;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      min-height:100vh;
+    body {
+      margin: 0;
+      font-family: "Courier New", monospace;
+      background: black;
+      color: #00ff00;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      overflow-x: hidden;
     }
 
-    h1{
-      font-size:2.2rem;
-      margin-bottom:20px;
-      text-align:center;
-      letter-spacing:2px;
+    .terminal-box {
+      background: #111;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #00ff00;
+      text-align: center;
+      width: 80%;
+      max-width: 800px;
     }
 
-    /* ===== Black Hole – Mateo 6-2 ===== */
+    .title {
+      font-size: 28px;
+      color: #0f0;
+      margin-bottom: 15px;
+    }
+
+    .loading {
+      font-size: 20px;
+      margin: 15px 0;
+      white-space: pre-wrap;
+    }
+
+    /* Botón descarga */
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 12px 25px;
+      font-size: 18px;
+      background: #0f0;
+      color: black;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .btn:hover {
+      background: #00aa00;
+    }
+
+    /* ==== Black Hole Animado (versión compacta) ==== */
     .bh-wrapper{
       position: relative;
-      width: min(70vmin, 560px);
-      height: min(70vmin, 560px);
+      width: 180px;   /* tamaño ajustado */
+      height: 180px;
       margin: 20px auto;
       display: grid;
       place-items: center;
-      filter: drop-shadow(0 0 25px #00ffbf);
+      filter: drop-shadow(0 0 12px #00ffbf);
     }
 
     .blackhole{
@@ -40,25 +73,23 @@
       height: 100%;
       display: grid;
       place-items: center;
-      transform: translateZ(0); /* acelera animación */
+      transform: translateZ(0);
     }
 
-    /* Núcleo negro (horizonte de eventos) */
     .bh-core{
       position: absolute;
-      width: 26%;
-      height: 26%;
+      width: 28%;
+      height: 28%;
       border-radius: 50%;
       background: radial-gradient(closest-side, #000 70%, #020202 100%);
-      box-shadow: inset 0 0 30px #000;
+      box-shadow: inset 0 0 10px #000;
       z-index: 3;
     }
 
-    /* Disco de acreción */
     .bh-disk{
       position: absolute;
-      width: 82%;
-      height: 82%;
+      width: 85%;
+      height: 85%;
       border-radius: 50%;
       background:
         conic-gradient(
@@ -75,86 +106,59 @@
       z-index: 2;
     }
 
-    /* Halo/relativistic glow */
     .bh-glow{
       position: absolute;
-      width: 96%;
-      height: 96%;
+      width: 100%;
+      height: 100%;
       border-radius: 50%;
       background:
-        radial-gradient(closest-side, #0000 60%, #0ff2 72%, #0ff1 78%, #0000 90%),
-        radial-gradient(closest-side, #0000 58%, #00ff9033 70%, #0000 86%);
+        radial-gradient(closest-side, #0000 60%, #0ff2 72%, #0ff1 78%, #0000 90%);
       filter: blur(2px);
       animation: bh-breathe 4s ease-in-out infinite;
       z-index: 1;
     }
 
-    /* Anillo exterior */
-    .bh-ring{
-      position: absolute;
-      width: 110%;
-      height: 34%;
-      border-radius: 50%;
-      background:
-        radial-gradient(closest-side, #0000 60%, #00ffd033 90%, #0000 100%);
-      transform: rotateX(70deg);
-      filter: blur(2px);
-      animation: bh-wobble 6s ease-in-out infinite;
-      z-index: 0;
-    }
-
-    /* Estrellas */
-    .bh-stars{
-      position: absolute;
-      inset: -10% -10% -10% -10%;
-      background:
-        radial-gradient(circle at 20% 30%, #ffffffaa 1px, transparent 2px),
-        radial-gradient(circle at 80% 60%, #ffffffaa 1px, transparent 2px),
-        radial-gradient(circle at 60% 15%, #ffffffaa 1px, transparent 2px),
-        radial-gradient(circle at 35% 80%, #ffffffaa 1px, transparent 2px),
-        radial-gradient(circle at 70% 75%, #ffffffaa 1px, transparent 2px),
-        radial-gradient(circle at 10% 65%, #ffffffaa 1px, transparent 2px);
-      background-size: 100% 100%;
-      opacity: .55;
-      mix-blend-mode: screen;
-      animation: bh-parallax 18s linear infinite;
-      pointer-events: none;
-    }
-
-    /* Animaciones */
-    @keyframes bh-spin{
-      to{ transform: rotate(360deg); }
-    }
+    @keyframes bh-spin{ to{ transform: rotate(360deg);} }
     @keyframes bh-breathe{
-      0%,100%{ filter: blur(2px) brightness(1); }
-      50%{ filter: blur(4px) brightness(1.3); }
+      0%,100%{ filter: blur(2px) brightness(1);}
+      50%{ filter: blur(3px) brightness(1.3);}
     }
-    @keyframes bh-wobble{
-      0%,100%{ transform: rotateX(70deg) rotateZ(0deg); }
-      50%{ transform: rotateX(70deg) rotateZ(8deg); }
+
+    /* Animación escribir texto */
+    .typing {
+      border-right: 2px solid #0f0;
+      white-space: nowrap;
+      overflow: hidden;
+      display: inline-block;
+      animation: typing 3s steps(30, end), blink .6s infinite;
+      font-size: 20px;
     }
-    @keyframes bh-parallax{
-      from{ background-position:0 0; }
-      to{ background-position:200px 400px; }
+
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+    @keyframes blink {
+      50% { border-color: transparent; }
     }
   </style>
 </head>
 <body>
-
-  <h1>Agujero Negro CSS Animado 🌀</h1>
-
-  <!-- Agujero negro -->
-  <div class="bh-wrapper">
-    <div class="blackhole">
-      <div class="bh-core"></div>
-      <div class="bh-disk"></div>
-      <div class="bh-glow"></div>
-      <div class="bh-ring"></div>
+  <div class="terminal-box">
+    <h1 class="title typing">Bienvenidos - Página de Mateo 6-2</h1>
+    <div class="loading">Buscando servidor...</div>
+    
+    <!-- Agujero negro animado -->
+    <div class="bh-wrapper">
+      <div class="blackhole">
+        <div class="bh-core"></div>
+        <div class="bh-disk"></div>
+        <div class="bh-glow"></div>
+      </div>
     </div>
-    <div class="bh-stars"></div>
+
+    <p>Descarga el archivo de video aquí:</p>
+    <a href="video.mp4" download class="btn">⬇ Descargar Video</a>
   </div>
-
-  <p>Todo hecho solo con <b>HTML + CSS</b></p>
-
 </body>
 </html>
