--- a/index.html
+++ b/index.html
@@ -2,163 +2,207 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Página de Mateo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Página de Mateo 6-2</title>
   <style>
     body {
       margin: 0;
-      font-family: "Courier New", monospace;
+      padding: 0;
       background: black;
       color: #00ff00;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+      font-family: 'Courier New', monospace;
       overflow-x: hidden;
     }
 
-    .terminal-box {
-      background: #111;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 20px #00ff00;
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    .container {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .box {
+      border: 3px solid #00ff00;
+      padding: 40px 60px;
+      border-radius: 12px;
+      box-shadow: 0 0 25px #00ff00;
       text-align: center;
-      width: 80%;
-      max-width: 800px;
+      max-width: 90%;
     }
 
-    .title {
-      font-size: 28px;
-      color: #0f0;
-      margin-bottom: 15px;
-    }
-
-    .loading {
-      font-size: 20px;
-      margin: 15px 0;
-      white-space: pre-wrap;
-    }
-
-    /* Botón descarga */
-    .btn {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 12px 25px;
-      font-size: 18px;
-      background: #0f0;
-      color: black;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    .btn:hover {
-      background: #00aa00;
-    }
-
-    /* ==== Black Hole Animado (versión compacta) ==== */
-    .bh-wrapper{
-      position: relative;
-      width: 180px;   /* tamaño ajustado */
-      height: 180px;
-      margin: 20px auto;
-      display: grid;
-      place-items: center;
-      filter: drop-shadow(0 0 12px #00ffbf);
-    }
-
-    .blackhole{
-      position: relative;
-      width: 100%;
-      height: 100%;
-      display: grid;
-      place-items: center;
-      transform: translateZ(0);
-    }
-
-    .bh-core{
-      position: absolute;
-      width: 28%;
-      height: 28%;
-      border-radius: 50%;
-      background: radial-gradient(closest-side, #000 70%, #020202 100%);
-      box-shadow: inset 0 0 10px #000;
-      z-index: 3;
-    }
-
-    .bh-disk{
-      position: absolute;
-      width: 85%;
-      height: 85%;
-      border-radius: 50%;
-      background:
-        conic-gradient(
-          from 0deg,
-          #fffb 0 20%,
-          #fff0 20% 30%,
-          #0ff8 30% 50%,
-          #fff0 50% 60%,
-          #0f08 60% 80%,
-          #fff0 80% 100%
-        );
-      filter: blur(1px) brightness(1.1) saturate(1.4);
-      animation: bh-spin 7s linear infinite;
-      z-index: 2;
-    }
-
-    .bh-glow{
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      background:
-        radial-gradient(closest-side, #0000 60%, #0ff2 72%, #0ff1 78%, #0000 90%);
-      filter: blur(2px);
-      animation: bh-breathe 4s ease-in-out infinite;
-      z-index: 1;
-    }
-
-    @keyframes bh-spin{ to{ transform: rotate(360deg);} }
-    @keyframes bh-breathe{
-      0%,100%{ filter: blur(2px) brightness(1);}
-      50%{ filter: blur(3px) brightness(1.3);}
-    }
-
-    /* Animación escribir texto */
     .typing {
-      border-right: 2px solid #0f0;
+      font-size: 2.8rem;
+      font-weight: bold;
+      border-right: 4px solid #00ff00;
       white-space: nowrap;
       overflow: hidden;
-      display: inline-block;
-      animation: typing 3s steps(30, end), blink .6s infinite;
-      font-size: 20px;
+      animation: blink 0.7s infinite;
     }
 
-    @keyframes typing {
-      from { width: 0; }
-      to { width: 100%; }
-    }
     @keyframes blink {
       50% { border-color: transparent; }
+    }
+
+    .second-section {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
+      color: cyan;
+      text-shadow: 0px 0px 10px cyan;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .scroll-btn {
+      margin-top: 30px;
+      padding: 15px 30px;
+      font-size: 1.4rem;
+      background: none;
+      border: 2px solid #00ff00;
+      color: #00ff00;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: 0.3s;
+    }
+
+    .scroll-btn:hover {
+      background: #00ff00;
+      color: black;
+    }
+
+    /* Estilo del video */
+    video {
+      margin-top: 20px;
+      width: 80%;
+      max-width: 700px;
+      border: 3px solid cyan;
+      border-radius: 12px;
+      box-shadow: 0 0 25px cyan;
+    }
+
+    /* Botón de descarga */
+    .download-btn {
+      margin-top: 20px;
+      padding: 12px 25px;
+      font-size: 1.3rem;
+      background: none;
+      border: 2px solid cyan;
+      color: cyan;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: 0.3s;
+      text-decoration: none;
+      display: inline-block;
+    }
+
+    .download-btn:hover {
+      background: cyan;
+      color: black;
     }
   </style>
 </head>
 <body>
-  <div class="terminal-box">
-    <h1 class="title typing">Bienvenidos - Página de Mateo 6-2</h1>
-    <div class="loading">Buscando servidor...</div>
-    
-    <!-- Agujero negro animado -->
-    <div class="bh-wrapper">
-      <div class="blackhole">
-        <div class="bh-core"></div>
-        <div class="bh-disk"></div>
-        <div class="bh-glow"></div>
-      </div>
-    </div>
+  <canvas id="matrix"></canvas>
 
-    <p>Descarga el archivo de video aquí:</p>
-    <a href="video.mp4" download class="btn">⬇ Descargar Video</a>
+  <div class="container">
+    <div class="box">
+      <div class="typing" id="typing-text"></div>
+      <button class="scroll-btn" onclick="scrollToSection()">Entrar</button>
+    </div>
   </div>
+
+  <div class="second-section" id="second-section">
+    🚀 Bienvenidos a la página oficial de Mateo 6-2 🌟
+    
+    <!-- Video incrustado -->
+    <video controls>
+      <source src="video.mp4" type="video/mp4">
+      Tu navegador no soporta video.
+    </video>
+
+    <!-- Botón de descarga -->
+    <a class="download-btn" href="video.mp4" download>⬇ Descargar Video</a>
+  </div>
+
+  <script>
+    // === Fondo Matrix ===
+    const canvas = document.getElementById("matrix");
+    const ctx = canvas.getContext("2d");
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
+
+    const letters = "01ABCDEFGHIJKLMNOPQRSTUVWXYZ#$%&";
+    const matrix = letters.split("");
+
+    const fontSize = 14;
+    const columns = canvas.width / fontSize;
+    const drops = [];
+
+    for (let x = 0; x < columns; x++) drops[x] = 1;
+
+    function draw() {
+      ctx.fillStyle = "rgba(0, 0, 0, 0.1)";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = `hsl(${Math.random()*360},100%,50%)`;
+      ctx.font = fontSize + "px monospace";
+      for (let i = 0; i < drops.length; i++) {
+        const text = matrix[Math.floor(Math.random() * matrix.length)];
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
+        drops[i]++;
+      }
+    }
+    setInterval(draw, 35);
+
+    // === Animación de texto ===
+    const frases = [
+      "Buscando servidores...",
+      "El mejor grupo de la exposición",
+      "Página de Mateo 6-2"
+    ];
+    let fraseIndex = 0;
+    let charIndex = 0;
+    let borrando = false;
+
+    function typeEffect() {
+      const typingText = document.getElementById("typing-text");
+      const frase = frases[fraseIndex];
+
+      if (!borrando && charIndex <= frase.length) {
+        typingText.textContent = frase.substring(0, charIndex++);
+      } else if (borrando && charIndex >= 0) {
+        typingText.textContent = frase.substring(0, charIndex--);
+      }
+
+      if (charIndex === frase.length + 1) {
+        borrando = true;
+        setTimeout(typeEffect, 1000);
+        return;
+      } else if (charIndex < 0) {
+        borrando = false;
+        fraseIndex = (fraseIndex + 1) % frases.length;
+      }
+
+      setTimeout(typeEffect, borrando ? 50 : 100);
+    }
+    typeEffect();
+
+    // === Scroll suave ===
+    function scrollToSection() {
+      document.getElementById("second-section").scrollIntoView({ behavior: "smooth" });
+    }
+  </script>
 </body>
 </html>
