--- a/index.html
+++ b/index.html
@@ -117,26 +117,76 @@
       font-size: 1.5rem;
     }
 
-    .loading-bar {
-      width: 300px;
-      height: 20px;
-      border: 2px solid #00ff00;
-      margin-top: 20px;
-      overflow: hidden;
+    /* ================== PIRÁMIDE ANIMADA ================== */
+    .pyramid-loader {
       position: relative;
+      width: 150px;
+      height: 150px;
+      display: block;
+      transform-style: preserve-3d;
+      transform: rotateX(-20deg);
+      margin-top: 25px;
     }
 
-    .loading-fill {
-      width: 0;
+    .wrapper {
+      position: relative;
+      width: 100%;
       height: 100%;
-      background: #00ff00;
-      box-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00;
-      animation: load 3s linear forwards;
+      transform-style: preserve-3d;
+      animation: spin 4s linear infinite;
     }
 
-    @keyframes load {
-      from { width: 0; }
-      to { width: 100%; }
+    @keyframes spin {
+      100% {
+        transform: rotateY(360deg);
+      }
+    }
+
+    .pyramid-loader .wrapper .side {
+      width: 70px;
+      height: 70px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      transform-origin: center top;
+      clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    }
+
+    .pyramid-loader .wrapper .side1 {
+      transform: rotateZ(-30deg) rotateY(90deg);
+      background: conic-gradient(#2BDEAC, #F028FD, #D8CCE6, #2F2585);
+    }
+
+    .pyramid-loader .wrapper .side2 {
+      transform: rotateZ(30deg) rotateY(90deg);
+      background: conic-gradient(#2F2585, #D8CCE6, #F028FD, #2BDEAC);
+    }
+
+    .pyramid-loader .wrapper .side3 {
+      transform: rotateX(30deg);
+      background: conic-gradient(#2F2585, #D8CCE6, #F028FD, #2BDEAC);
+    }
+
+    .pyramid-loader .wrapper .side4 {
+      transform: rotateX(-30deg);
+      background: conic-gradient(#2BDEAC, #F028FD, #D8CCE6, #2F2585);
+    }
+
+    .pyramid-loader .wrapper .shadow {
+      width: 60px;
+      height: 60px;
+      background: #8B5AD5;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      transform: rotateX(90deg) translateZ(-40px);
+      filter: blur(12px);
     }
   </style>
 </head>
@@ -144,7 +194,16 @@
   <!-- Pantalla de carga -->
   <div id="loader">
     <div>Cargando sistema...</div>
-    <div class="loading-bar"><div class="loading-fill"></div></div>
+    <!-- Pirámide en la carga -->
+    <div class="pyramid-loader">
+      <div class="wrapper">
+        <span class="side side1"></span>
+        <span class="side side2"></span>
+        <span class="side side3"></span>
+        <span class="side side4"></span>
+        <span class="shadow"></span>
+      </div>
+    </div>
   </div>
 
   <!-- Fondo Matrix -->
@@ -157,6 +216,17 @@
       <a href="video.mp4" download>
         <button>Descargar</button>
       </a>
+    </div>
+
+    <!-- Pirámide debajo del botón -->
+    <div class="pyramid-loader" style="margin-top:40px; transform: scale(0.8) rotateX(-20deg);">
+      <div class="wrapper">
+        <span class="side side1"></span>
+        <span class="side side2"></span>
+        <span class="side side3"></span>
+        <span class="side side4"></span>
+        <span class="shadow"></span>
+      </div>
     </div>
   </div>
 
