--- a/index.html
+++ b/index.html
@@ -3,33 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Loader Mano 👍</title>
+  <title>Cargando...</title>
   <style>
+    /* Fondo estilo Matrix */
     body {
+      margin: 0;
+      height: 100vh;
+      background: black;
+      color: #00ff00;
+      font-family: monospace;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      background: #0f0f0f;
-      margin: 0;
-      font-family: Arial, sans-serif;
+      flex-direction: column;
       overflow: hidden;
     }
 
-    /* Loader */
-    .loader {
-      text-align: center;
-      color: white;
+    /* Texto de carga */
+    .loading-text {
+      font-size: 2rem;
+      margin-bottom: 20px;
     }
 
+    /* Animación de la mano */
     .🤚 {
       --skin-color: #E4C560;
       --tap-speed: 0.6s;
       --tap-stagger: 0.1s;
       position: relative;
-      width: 80px;
-      height: 60px;
-      margin: 0 auto 20px;
+      width: 60px; /* más pequeño */
+      height: 50px;
+      margin-top: 10px; /* separación con el texto */
     }
 
     .🤚:before {
@@ -153,29 +157,19 @@
       0%, 50%, 100% { transform: rotate(10deg) scale(1); }
       40% { transform: rotate(50deg) scale(1); }
     }
-
-    .loader p {
-      font-size: 18px;
-      letter-spacing: 2px;
-      animation: blink 1.2s infinite;
-    }
-
-    @keyframes blink {
-      50% { opacity: 0.5; }
-    }
   </style>
 </head>
 <body>
-  <div class="loader">
-    <div class="🤚">
-      <div class="🌴"></div>
-      <div class="👍"></div>
-      <div class="👉"></div>
-      <div class="👉"></div>
-      <div class="👉"></div>
-      <div class="👉"></div>
-    </div>
-    <p>Cargando...</p>
+  <div class="loading-text">Cargando...</div>
+  
+  <!-- Mano animada debajo -->
+  <div class="🤚">
+    <div class="🌴"></div>
+    <div class="👍"></div>
+    <div class="👉"></div>
+    <div class="👉"></div>
+    <div class="👉"></div>
+    <div class="👉"></div>
   </div>
 </body>
 </html>
