--- a/index.html
+++ b/index.html
@@ -117,91 +117,190 @@
       font-size: 1.5rem;
     }
 
-    /* ================== PIRÁMIDE ANIMADA ================== */
-    .pyramid-loader {
+    /* ================== MANO / DEDOS ANIMADOS (reemplaza la pirámide) ================== */
+    .hand-loader {
+      --skin-color: #E4C560;
+      --tap-speed: 0.6s;
+      --tap-stagger: 0.1s;
       position: relative;
-      width: 150px;
-      height: 150px;
-      display: block;
-      transform-style: preserve-3d;
-      transform: rotateX(-20deg);
-      margin-top: 25px;
+      width: 150px; /* tamaño por defecto para la carga */
+      height: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
     }
 
-    .wrapper {
+    /* Sombra del conjunto (opcional) */
+    .hand-loader:before {
+      content: '';
+      position: absolute;
+      width: 140%;
+      height: 30%;
+      bottom: -10%;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0,0,0,0.4);
+      filter: blur(10px);
+      border-radius: 50%;
+      z-index: 0;
+    }
+
+    .🤚 {
+      --skin-color: var(--skin-color);
+      --tap-speed: var(--tap-speed);
+      --tap-stagger: var(--tap-stagger);
       position: relative;
+      width: 80px;
+      height: 60px;
+      margin: 0 auto;
+      z-index: 1;
+    }
+
+    .🤚:before {
+      content: '';
+      display: block;
+      width: 180%;
+      height: 75%;
+      position: absolute;
+      top: 70%;
+      right: 20%;
+      background-color: black;
+      border-radius: 40px 10px;
+      filter: blur(10px);
+      opacity: 0.3;
+    }
+
+    .🌴 {
+      display: block;
       width: 100%;
       height: 100%;
-      transform-style: preserve-3d;
-      animation: spin 4s linear infinite;
-    }
-
-    @keyframes spin {
-      100% {
-        transform: rotateY(360deg);
-      }
-    }
-
-    .pyramid-loader .wrapper .side {
-      width: 70px;
-      height: 70px;
       position: absolute;
       top: 0;
       left: 0;
-      right: 0;
-      bottom: 0;
-      margin: auto;
-      transform-origin: center top;
-      clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+      background-color: var(--skin-color);
+      border-radius: 10px 40px;
     }
 
-    .pyramid-loader .wrapper .side1 {
-      transform: rotateZ(-30deg) rotateY(90deg);
-      background: conic-gradient(#2BDEAC, #F028FD, #D8CCE6, #2F2585);
-    }
-
-    .pyramid-loader .wrapper .side2 {
-      transform: rotateZ(30deg) rotateY(90deg);
-      background: conic-gradient(#2F2585, #D8CCE6, #F028FD, #2BDEAC);
-    }
-
-    .pyramid-loader .wrapper .side3 {
-      transform: rotateX(30deg);
-      background: conic-gradient(#2F2585, #D8CCE6, #F028FD, #2BDEAC);
-    }
-
-    .pyramid-loader .wrapper .side4 {
-      transform: rotateX(-30deg);
-      background: conic-gradient(#2BDEAC, #F028FD, #D8CCE6, #2F2585);
-    }
-
-    .pyramid-loader .wrapper .shadow {
-      width: 60px;
-      height: 60px;
-      background: #8B5AD5;
+    .👍 {
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      margin: auto;
-      transform: rotateX(90deg) translateZ(-40px);
-      filter: blur(12px);
+      width: 120%;
+      height: 38px;
+      background-color: var(--skin-color);
+      bottom: -18%;
+      right: 1%;
+      transform-origin: calc(100% - 20px) 20px;
+      transform: rotate(-20deg);
+      border-radius: 30px 20px 20px 10px;
+      border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+      border-left: 2px solid rgba(0, 0, 0, 0.1);
     }
+
+    .👍:after {
+      width: 20%;
+      height: 60%;
+      content: '';
+      background-color: rgba(255, 255, 255, 0.3);
+      position: absolute;
+      bottom: -8%;
+      left: 5px;
+      border-radius: 60% 10% 10% 30%;
+      border-right: 2px solid rgba(0, 0, 0, 0.05);
+    }
+
+    .👉 {
+      position: absolute;
+      width: 80%;
+      height: 35px;
+      background-color: var(--skin-color);
+      bottom: 32%;
+      right: 64%;
+      transform-origin: 100% 20px;
+      animation-duration: calc(var(--tap-speed) * 2);
+      animation-timing-function: ease-in-out;
+      animation-iteration-count: infinite;
+      transform: rotate(10deg);
+    }
+
+    .👉:before {
+      content: '';
+      position: absolute;
+      width: 140%;
+      height: 30px;
+      background-color: var(--skin-color);
+      bottom: 8%;
+      right: 65%;
+      transform-origin: calc(100% - 20px) 20px;
+      transform: rotate(-60deg);
+      border-radius: 20px;
+    }
+
+    .👉:nth-child(1) {
+      animation-delay: 0;
+      filter: brightness(70%);
+      animation-name: tap-upper-1;
+    }
+
+    .👉:nth-child(2) {
+      animation-delay: var(--tap-stagger);
+      filter: brightness(80%);
+      animation-name: tap-upper-2;
+    }
+
+    .👉:nth-child(3) {
+      animation-delay: calc(var(--tap-stagger) * 2);
+      filter: brightness(90%);
+      animation-name: tap-upper-3;
+    }
+
+    .👉:nth-child(4) {
+      animation-delay: calc(var(--tap-stagger) * 3);
+      filter: brightness(100%);
+      animation-name: tap-upper-4;
+    }
+
+    @keyframes tap-upper-1 {
+      0%, 50%, 100% { transform: rotate(10deg) scale(0.4); }
+      40% { transform: rotate(50deg) scale(0.4); }
+    }
+
+    @keyframes tap-upper-2 {
+      0%, 50%, 100% { transform: rotate(10deg) scale(0.6); }
+      40% { transform: rotate(50deg) scale(0.6); }
+    }
+
+    @keyframes tap-upper-3 {
+      0%, 50%, 100% { transform: rotate(10deg) scale(0.8); }
+      40% { transform: rotate(50deg) scale(0.8); }
+    }
+
+    @keyframes tap-upper-4 {
+      0%, 50%, 100% { transform: rotate(10deg) scale(1); }
+      40% { transform: rotate(50deg) scale(1); }
+    }
+
+    /* versión pequeña para la mano que aparece debajo del botón */
+    .hand-small {
+      transform: scale(0.7);
+      margin-top: 40px;
+    }
+
   </style>
 </head>
 <body>
   <!-- Pantalla de carga -->
   <div id="loader">
     <div>Cargando sistema...</div>
-    <!-- Pirámide en la carga -->
-    <div class="pyramid-loader">
-      <div class="wrapper">
-        <span class="side side1"></span>
-        <span class="side side2"></span>
-        <span class="side side3"></span>
-        <span class="side side4"></span>
-        <span class="shadow"></span>
+
+    <!-- Mano (reemplaza la pirámide en la carga) -->
+    <div class="hand-loader" aria-hidden="true">
+      <div class="🤚">
+        <div class="🌴"></div>
+        <div class="👍"></div>
+        <div class="👉"></div>
+        <div class="👉"></div>
+        <div class="👉"></div>
+        <div class="👉"></div>
       </div>
     </div>
   </div>
@@ -218,14 +317,15 @@
       </a>
     </div>
 
-    <!-- Pirámide debajo del botón -->
-    <div class="pyramid-loader" style="margin-top:40px; transform: scale(0.8) rotateX(-20deg);">
-      <div class="wrapper">
-        <span class="side side1"></span>
-        <span class="side side2"></span>
-        <span class="side side3"></span>
-        <span class="side side4"></span>
-        <span class="shadow"></span>
+    <!-- Mano debajo del botón (tamaño reducido) -->
+    <div class="hand-loader hand-small" aria-hidden="true">
+      <div class="🤚">
+        <div class="🌴"></div>
+        <div class="👍"></div>
+        <div class="👉"></div>
+        <div class="👉"></div>
+        <div class="👉"></div>
+        <div class="👉"></div>
       </div>
     </div>
   </div>
